--- a/.gitignore
+++ b/.gitignore
@@ -16,7 +16,8 @@
 
 # Ignore .DS_store file
 .DS_Store
-*.sublime-*
+/interpretation.sublime-workspace
+/interpretation.sublime-project
 
 # Ignore gems installed in local directory
 /vendor/bundle/
