--- a/.gitignore
+++ b/.gitignore
@@ -22,5 +22,8 @@
 # Ignore gems installed in local directory
 /vendor/bundle/
 
+# Ignore vim temp files
+.*.swp
+
 # Ignore downloaded docs (which are binary and versioned elsewhere)
 /docs
